--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native-elements": "^0.18.2",
     "react-native-render-html": "^3.5.1",
     "react-native-root-toast": "^2.2.0",
+    "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-spinkit": "^1.1.1",
     "react-native-splash-screen": "^3.0.6",
     "react-native-swipe-list-view": "^0.4.6",
