--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "react-native-code-push": "^5.2.0-beta",
     "react-native-cookies": "^3.2.0",
     "react-native-elements": "^0.18.2",
+    "react-native-gesture-handler": "^1.0.0-alpha.31",
     "react-native-render-html": "^3.5.1",
     "react-native-root-toast": "^2.2.0",
     "react-native-scrollable-tab-view": "^0.8.0",
     "react-native-spinkit": "^1.1.1",
     "react-native-splash-screen": "^3.0.6",
     "react-native-swipe-list-view": "^0.4.6",
+    "react-native-tab-view": "^0.0.70",
     "react-native-vector-icons": "^4.4.2",
     "react-native-webview-bridge": "^0.33.0",
     "react-navigation": "^1.0.0-beta.21",
