--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -161,6 +161,7 @@ dependencies {
     compile project(':react-native-cookies')
     compile project(':react-native-autoheight-webview')
     compile fileTree(dir: "libs", include: ["*.jar"])
+    compile 'com.facebook.fresco:animated-gif:0.13.0' // 支持 gif格式图片加载
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
