--- a/package.json
+++ b/package.json
@@ -7,9 +7,17 @@
     "test": "jest"
   },
   "dependencies": {
+    "axios": "^0.17.1",
+    "moment": "^2.20.1",
     "native-base": "^2.3.5",
+    "prop-types": "^15.6.0",
     "react": "16.0.0",
     "react-native": "0.51.0",
+    "react-native-autoheight-webview": "^0.4.0",
+    "react-native-cookies": "^3.2.0",
+    "react-native-htmlview": "^0.12.1",
+    "react-native-refresh-list-view": "^1.0.7",
+    "react-native-render-html": "^3.6.0",
     "react-navigation": "^1.0.0-beta.22",
     "react-redux": "^5.0.6",
     "redux": "^3.7.2"
