--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "axios": "^0.17.1",
+    "janalytics-react-native": "^1.1.0",
+    "jcore-react-native": "^1.2.3",
     "moment": "^2.20.1",
     "native-base": "^2.3.5",
     "prop-types": "^15.6.0",
@@ -15,12 +17,10 @@
     "react-native": "0.51.0",
     "react-native-autoheight-webview": "^0.4.0",
     "react-native-cookies": "^3.2.0",
-    "react-native-htmlview": "^0.12.1",
     "react-native-refresh-list-view": "^1.0.7",
     "react-native-render-html": "^3.6.0",
     "react-navigation": "^1.0.0-beta.22",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2"
+    "rn-splash-screen": "^5.2.0"
   },
   "devDependencies": {
     "babel-jest": "22.0.4",
